fix:修改更新目标的逻辑问题
